/* restapi.proto: describes the RestAPIConfig object
 *
 * Author: J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

message RestAPIConfig {
    string addr = 1;
    int32 port = 2;
}